--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta name="google-site-verification" content="j8ibMwGjyVGF5YmzzyKzxrGfeplEmLYhP838C0mP0lc" />
 	</head>
 	<body class="homepage is-preload" >
 		<div id="page-wrapper">
