--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 	<head>
 		<title>Internet-технології</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119956982-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
+</script>
 		<meta name="google-site-verification" content="j8ibMwGjyVGF5YmzzyKzxrGfeplEmLYhP838C0mP0lc" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
