--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ gtag('js', new Date());
 
 gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 </script>
+		<script async="" defer="" src="//survey.g.doubleclick.net/async_survey?site=vqcvpuqcgsokpwqgyegf7vfqma"></script>
 		<meta name="google-site-verification" content="j8ibMwGjyVGF5YmzzyKzxrGfeplEmLYhP838C0mP0lc" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
