--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-				 				<h1 class="text"><a href="index.html" id="logo">Актуальні It-технології 2020</a></h1>
+				 				<h1 class="text"><a href="index.html" id="logo">Актуальні IT-технології 2020</a></h1>
 								<hr />
 								<p>Web-дизайн</p>
 							</header>
