--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 								<p>Web-дизайн</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#banner" class="button circled scrolly">Старт</a>
 							</footer>
 						</div>
 					<!-- Nav -->
@@ -53,7 +53,7 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Сучасні технології веб-розробки.</h2>
+						<h2>Сучасні технології веб-розробки</h2>
 					</header>
 				</section>
 			<!-- Carousel -->
