--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 						<p>
 							Від якості дизайну залежить успіх всього сайту. Тому дуже важливо стежити за трендом, розуміти які інструменти увійшли в моду в сфері сайтобудування, а які вже вважаються застарілими і залишаються позаду. До слова, тренди в веб-дизайні постійно змінюються, удосконалюються, модернізуються. Те, що було актуально в 2016-2017 роках зменшує свої обороти, поступаючись абсолютно новим фішках. І вам, як дизайнеру або сучасному підприємцю, необхідно знати про них, щоб результат розробки сайтів був не просто ефективним, а створював правильне враження про компанію, якій належить веб-ресурс.
 						</p>
-						<center><iframe width="853" height="480" src="https://www.youtube.com/embed/GhCwuGf9w10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+						<div class="iframe"><center><iframe width="853" height="480" src="https://www.youtube.com/embed/GhCwuGf9w10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center></div>
 						<footer>
 							<a href="index12.html" class="button">Читати далі</a>
 						</footer>
