--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
                                  <input type="text" placeholder="Username">
                              <input type="email" placeholder="Email">
                           <textarea placeholder="Повідомлення..." rows="3"></textarea>
-                      <input type="submit" onClick='location.href="https://mail.google.com/mail/u/0/?tab=om1#inbox"'>
+                      <a href="mailto:katerina.vandysh@gmail.com" class="main-btn email-lnk">message me <i class="email"></i></a>
                    </div>
 
                       </form>
