--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html>
 	<head>
 		<title>It-технології 2020</title>
+		<script data-ad-client="ca-pub-7542415558882226" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119956982-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
+</script>
+<script async="" defer="" src="//survey.g.doubleclick.net/async_survey?site=vqcvpuqcgsokpwqgyegf7vfqma"></script>
+		<meta name="google-site-verification" content="j8ibMwGjyVGF5YmzzyKzxrGfeplEmLYhP838C0mP0lc" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script data-ad-client="ca-pub-7542415558882226" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body class="homepage is-preload" >
+
+
+
+
 		<div id="page-wrapper">
 				<div id="header">
 						<div class="inner">
