--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script src="https://vk.com/js/api/openapi.js?167" type="text/javascript"></script>
 		<title>It-технології 2020</title>
 		<script data-ad-client="ca-pub-7542415558882226" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -21,7 +22,28 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 		<script data-ad-client="ca-pub-7542415558882226" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body class="homepage is-preload" >
-
+<script type="text/javascript">
+  VK.init({
+    apiId: ВАШ_API_ID,
+    onlyWidgets: true
+  });
+</script>
+		
+		<div id="vk_comments"></div>
+<script type="text/javascript">
+ VK.Widgets.Comments('vk_comments');
+</script>
+		
+		
+		
+		
+	<div id="vk_comments"></div>
+<script type="text/javascript">
+window.onload = function () {
+ VK.init({apiId: 111, onlyWidgets: true});
+ VK.Widgets.Comments('vk_comments', {width: 500, limit: 15}, 321);
+}
+</script>
 
 
 
