--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 		<script data-ad-client="ca-pub-7542415558882226" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body class="homepage is-preload" >
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-dfff86d3-d108-4229-bdcc-bb34b72fad2a"></div>
 
 		
 		
