--- a/index.html
+++ b/index.html
@@ -330,18 +330,8 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 									</div>
 								</section>
 						</div>
-							<form class="decor">
-                              <div class="form-left-decoration"></div>
-                                <div class="form-right-decoration"></div>
-                                   <div class="circle"></div>
-                                      <div class="form-inner">
-                                   <h3>Написати мені</h3>
-                                 <input type="text" placeholder="Username">
-                             <input type="email" placeholder="Email">
-                          <textarea placeholder="Повідомлення..." rows="3"></textarea>
-                      <button class="submitform"><a href="mailto:katerina.vandysh@gmail.com" class="main-btn email-lnk">Message me <i class="email"></i></a></button>	
-                   </div>
-                      </form>
+							<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
 					<div id="mc-container"></div>
 <script type="text/javascript">
 cackle_widget = window.cackle_widget || [];
