--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 <div class="elfsight-app-c4605b6f-35ea-4cd8-b3d9-a64616f046b9"></div>
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-db3d56d8-d220-4222-973d-d1a6a923838c"></div>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
 
 		
 		
