--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 <div class="elfsight-app-db3d56d8-d220-4222-973d-d1a6a923838c"></div>
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
 		
 		
 
