--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 <div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
 		
 		
 
