--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 <div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-78bcba9a-6760-4049-8a05-e4adf4aff53f"></div>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-78bcba9a-6760-4049-8a05-e4adf4aff53f"></div>
 		
 
 		
