--- a/index001.html
+++ b/index001.html
@@ -8,6 +8,26 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="right-sidebar is-preload">
+		script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1a41a43b-40c9-410c-83c7-7dd451ffa8a1"></div>
+
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-c4605b6f-35ea-4cd8-b3d9-a64616f046b9"></div>
+
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-db3d56d8-d220-4222-973d-d1a6a923838c"></div>
+
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-6d2ddce2-9bff-49fc-9dde-ab6eea75e7f9"></div>
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-dfff86d3-d108-4229-bdcc-bb34b72fad2a"></div>
 		<div id="page-wrapper">
 				<div id="header">
 						<div class="inner">
