--- a/index001.html
+++ b/index001.html
@@ -8,7 +8,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="right-sidebar is-preload">
-		script src="https://apps.elfsight.com/p/platform.js" defer></script>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-1a41a43b-40c9-410c-83c7-7dd451ffa8a1"></div>
 
 
