--- a/index001.html
+++ b/index001.html
@@ -12,6 +12,10 @@
 <div class="elfsight-app-1a41a43b-40c9-410c-83c7-7dd451ffa8a1"></div>
 
 
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1a41a43b-40c9-410c-83c7-7dd451ffa8a1"></div>
+
+
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-c4605b6f-35ea-4cd8-b3d9-a64616f046b9"></div>
 
@@ -28,6 +32,12 @@
 
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-dfff86d3-d108-4229-bdcc-bb34b72fad2a"></div>
+
+
+		
+
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
 		<div id="page-wrapper">
 				<div id="header">
 						<div class="inner">
