--- a/index001.html
+++ b/index001.html
@@ -38,6 +38,12 @@
 
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
+
+
+		
+
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
 		<div id="page-wrapper">
 				<div id="header">
 						<div class="inner">
@@ -178,8 +184,7 @@
 						</div>
 					</div>
 				</div>
-<a id="button">
-					<img src="images\nn.png" width="50" height="50">
+
 				</a>
 				<div id="footer">
 					<div class="container">
