--- a/index4.html
+++ b/index4.html
@@ -9,6 +9,42 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="right-sidebar is-preload">
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1a41a43b-40c9-410c-83c7-7dd451ffa8a1"></div>
+
+
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1a41a43b-40c9-410c-83c7-7dd451ffa8a1"></div>
+
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-c4605b6f-35ea-4cd8-b3d9-a64616f046b9"></div>
+
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-db3d56d8-d220-4222-973d-d1a6a923838c"></div>
+
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-cbc36c96-c0df-4ac7-aeaf-152358be555a"></div>
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-6d2ddce2-9bff-49fc-9dde-ab6eea75e7f9"></div>
+
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-dfff86d3-d108-4229-bdcc-bb34b72fad2a"></div>
+
+
+		
+
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
+
+
+		
+
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
 		<div id="page-wrapper">
 				<div id="header">
 						<div class="inner">
@@ -205,9 +241,6 @@
 						</div>
 					</div>
 				</div>
-<a id="button">
-					<img src="images\nn.png" width="50" height="50">
-				</a>
 				<div id="footer">
 					<div class="container">
 						<div class="row">
@@ -308,18 +341,7 @@
 								</section>
 
 						</div>
-								<form class="decor">
-  <div class="form-left-decoration"></div>
-  <div class="form-right-decoration"></div>
-  <div class="circle"></div>
-  <div class="form-inner">
-    <h3>Написати мені</h3>
-    <input type="text" placeholder="Username">
-    <input type="email" placeholder="Email">
-    <textarea placeholder="Повідомлення..." rows="3"></textarea>
-      <button class="submitform"><a href="mailto:katerina.vandysh@gmail.com" class="main-btn email-lnk">Message me <i class="email"></i></a></button>	
-  </div>
-</form>
+								
 						<hr />
 						<div class="row">
 							<div class="col-12">
