--- a/index.html
+++ b/index.html
@@ -347,21 +347,21 @@ gtag('config', 'UA-119956982-1', { 'optimize_id': 'GTM-KXVKF7P'});
 									</div>
 								</section>
 						</div>
-							<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-3d4578cb-0deb-4f76-b8c4-f9a80b26828d"></div>
-					<div id="mc-container"></div>
+							<div id="wpac-comment"></div>
 <script type="text/javascript">
-cackle_widget = window.cackle_widget || [];
-cackle_widget.push({widget: 'Comment', id: 73095});
+wpac_init = window.wpac_init || [];
+wpac_init.push({widget: 'Comment', id: 24823});
 (function() {
+    if ('WIDGETPACK_LOADED' in window) return;
+    WIDGETPACK_LOADED = true;
     var mc = document.createElement('script');
     mc.type = 'text/javascript';
     mc.async = true;
-    mc.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cackle.me/widget.js';
+    mc.src = 'https://embed.widgetpack.com/widget.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
 })();
 </script>
-<a id="mc-link" href="http://cackle.me">Комментарии для сайта <b style="color:#4FA3DA">Cackl</b><b style="color:#F65077">e</b></a>
+<a href="https://widgetpack.com" class="wpac-cr">Comments System WIDGET PACK</a>
 
 						
 						
